<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Sync Connection">
        <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/sync_pref"
        android:summary="@string/sync_pref_summary"
        android:defaultValue="false"/>

        <ListPreference
            android:dependency="pref_sync"
            android:key="pref_sync_connection_type"
            android:title="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionType_entries"
            android:entryValues="@array/pref_syncConnectionType_values"
            android:defaultValue="@string/pref_syncConnectionType_default_value"
            android:summary="@string/pref_syncConnectionType_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Notification">
        <SwitchPreference
            android:key="notification"
            android:title="Enable message notifications"
            />
        <Preference
            android:key="feedback"
            android:title="Send feedback"
            android:summary="Report technical issues or suggest new features"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="Screen Orientation ">

        <ListPreference
            android:title="Orientation"
            android:key="ORIENTATION"
            android:defaultValue="false"
            android:entries="@array/items_name"
            android:entryValues="@array/items_value"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Version">
        <ListPreference
            android:title="Version : 1.0" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Ringtone Preference">

        <RingtonePreference
            android:defaultValue="false"
            android:key="Ringtone"
            android:title="Ringtone preference"
            android:summary="Choose your ringtone"
            />
    </PreferenceCategory>


</PreferenceScreen>